--- a/main.html
+++ b/main.html
@@ -5,12 +5,66 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	<style>
+		:root {
+    background-color: rgb(135, 206, 235);
+}
+
+/* Styling the article paragraphs */
+article p:first-child {
+    color: white;
+    background-color: black;
+}
+
+article p:nth-child(2) {
+    color: inherit; /* Standard text color */
+}
+
+article p:last-child {
+    color: red;
+}
+
+/* Styling the unordered list */
+ul {
+    list-style-type: none; /* Remove default bullet points */
+    padding: 0; /* Remove default padding */
+}
+
+ul li {
+    background-color: gray;
+    width: 50%;
+    padding: 10px;
+}
+
+ul li:nth-child(odd) {
+    background-color: white;
+}
+
+ul li:first-child,
+ul li:last-child {
+    font-size: 22px;
+}
+
+ul li:nth-last-child(3) {
+    background-color: pink;
+}
+		
+	</style>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	 <article>
+        <p>first paragraph.</p>
+        <p>This is the second paragraph.</p>
+        <p>This is the third paragraph.</p>
+    </article>
 
+    <ul>
+        <li>List Item </li>
+        <li>List Item </li>
+        <li>List Item </li>
+        <li>List Item </li>
+        <li>List Item </li>
+    </ul>
 </body>
 
 </html>
